--- a/posters/posters/2025-slice_winter-tidalsim_rust/index.scss
+++ b/posters/posters/2025-slice_winter-tidalsim_rust/index.scss
@@ -63,3 +63,13 @@ ul {
     }
   }
 }
+
+code.inline {
+  font-size: 80%;
+  background: #d5d6db;
+  border-radius: 0.3rem;
+  padding: 0.1rem;
+  padding-left: 0.2rem;
+  padding-right: 0.2rem;
+  color: #0f4b6e;
+}
